# qwen-assistant

./: .env.example  .gitignore  AUTH_README.md  CLAUDE.md  KNOWLEDGE.md  LICENSE  PLAN.md  README.md  TASKS.md  example.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  squad-config.json
.claude/: settings.json
.github/workflows/: ci.yml
config/: default_config.yaml  test_config.yaml
qwen_assistant/: CLAUDE.md  __init__.py  __main__.py  config.py  main.py  ui.py
qwen_assistant/agents/: README.md  __init__.py  base.py  data.py  desktop.py  documentation.py  router.py  search.py
qwen_assistant/security/: __init__.py  api_keys.py  auth.py  data_protection.py  logging.py  security_manager.py  validation.py
qwen_assistant/utils/: config.py  logging.py
src/agents/: __init__.py  base.py
src/auth/: __init__.py  auth_manager.py  credential_store.py
src/ui/: __init__.py  gradio_interface.py
src/utils/: __init__.py
tests/: __init__.py  conftest.py  test_config.py  test_data_agent.py  test_desktop_agent.py  test_documentation.py  test_router.py  test_search_agent.py
tests/security/: __init__.py  test_api_keys.py  test_auth.py  test_data_protection.py  test_logging.py  test_security_manager.py  test_validation.py
