[tool.poetry]
name = "qwen_assistant"
version = "0.1.0"
description = "Qwen Assist"
authors = ["ajbmachon <ajbmachon2@gmail.com>"]
readme = "README.md"
packages = [{include = "qwen_assistant"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
qwen-agent = {version = ">=0.0.23,<0.0.24", extras = ["gui", "rag", "code_interpreter", "mcp"]}
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
mypy = ">=1.5.1"
ruff = ">=0.0.290"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

